# Passively-Wheeled-UAV

energy_planner/: CMakeLists.txt  package.xml
energy_planner/config/: energy_aware_path_planner.yaml
energy_planner/include/energy_planner/: energy_aware_path_planner.hpp  reference_path_publisher.hpp
energy_planner/launch/: energy_planner.launch.py  reference_path_publisher.launch.py
energy_planner/src/: energy_aware_path_planner.cpp  reference_path_publish_node.cpp  reference_path_publisher.cpp
octomap_generator/: CMakeLists.txt  package.xml
octomap_generator/include/octomap_generator/: octomap_publisher.hpp
octomap_generator/src/: octomap_publish_node.cpp  octomap_publisher.cpp
pwuav_control/: CMakeLists.txt  package.xml
pwuav_control/config/: rviz_config.rviz  test  test_point
pwuav_control/launch/: mpc_tuning.launch.py
pwuav_control/src/controller/: mpc.cpp
pwuav_control/src/waypoint_generator/: reference_path_publisher.cpp  sample_waypoints.h  waypoint_generator.cpp
pwuav_control/utils/: cylinders.sdf  generate_cylinder_world.py
px4_ros_com/: CMakeLists.txt  package.xml
px4_ros_com/src/controller/: mpc.cpp
px4_ros_com/src/examples/listeners/: odometry_converter.cpp
px4_ros_com/src/examples/offboard/: offboard_control.cpp
px4_ros_com/src/traj_opt/: trajectory_optimizer.cpp
px4_ros_com/src/waypoint_generator/: reference_path_publisher.cpp  sample_waypoints.h  waypoint_generator.cpp
wheelbird_gz/: CMakeLists.txt  package.xml
wheelbird_gz/config/: wheelbird1_config.yaml  wheelbird2_config.yaml  wheelbird3_config.yaml  wheelbird4_config.yaml
wheelbird_gz/launch/: wheelbird_multi.launch.py  wheelbird_single.launch.py
wheelbird_gz/rviz/: wheelbird.rviz
